Design and Layout iteration 2

--- a/source/content/01 - Узлы игрока/03 - Народы/01 - Хугуши.md
+++ b/source/content/01 - Узлы игрока/03 - Народы/01 - Хугуши.md
@@ -1,3 +1,13 @@
 ---
 title: Хугуши
 ---
+# Хугуши
+___
+Жизнь хугуша – это странствие, а странствие – это жизнь. Хугуши не жаждут власти или богатства, каждый из них ищет дорогу ветра и дюн, новые встречи, новые места. Некоторых на подобный образ жизни толкает черезмерное любопытство, что нередкость для вашего народа, а некоторые движимы желанием найти свое призвание в этом мире, свою Оммаш. В вашей культуре это интерпретируют по разному: кто-то говорит, что это вещь, кто-то – что это действие или занятие, другие рассказывают о родственной душе или месте. Как только хугуш находит свою Оммаш, он обычно оседает на месте и больше не путешествует.
+
+Ваши предки были первыми кто последовал за Мэрмэшом на поверхность и начал исследовать и осваивать дивный новый мир осколка. А древние семьи вашего народа были первыми, кто свормировал торговые караваны и отправил их по всему осколку с целью найти другие народы, поделиться с нмии находками, собранными за многолетние странствия. Это сделало вашу родину - Шуккар, практически центром мира, куда стекаются люди со всего осколка поторговать, а ваш народ негластными правителями этого региона. Семьи вашего народа одно из его достояний, ведь количетсво хугушей в одной семье может достигать дюжины, а то и двух дюжин. Членов такой семьи можно найти в любом уголке света, причем хугуш всегда узнает своего сородича в толпе. Каждая семья ассоциирует себя с каим-то родом деятельности: cемья Мэр разводит бархашей в Тарраске, городе на краю, cемья Хешта большиснтво предприятий по чеканке монет и т.п. Вы намерены несмотря ни на что отыскать свою Оммаш, чем бы она не являлась. А до тех пор ваше незабываемое странствие продолжается. 
+## Внешность
+Рост хугуша не превышает 122 санотиметров. Кожа у них в основном смуглая, но иногда встречаются темнокожие представители этого народа. Волосы вьющиеся, чаще каштанового оттенка или же темные, почти черные. Хугуши носят шаровары – широкие брюки, которые плотно обхватывают лодыжки, и легкую шелковую одежду. На говоле они носят традиционные головные уборы - тюрбаны с множеством украшенйи на них.
+### Примеры имен
+- **Мужские имена.** Гарсиф, Дастан, Нашер, Ирадж, Мади, Сохраб, Миндер, Тану, Изудин, Могой, Фахд.
+- **Женские имена.** Эльназ, Дияла, Шуна, Нана, Тала, Нима, Сома, Бана, Бахана, Джасиба, Канза.
