--- a/source/content/00 - Введение.md
+++ b/source/content/00 - Введение.md
@@ -2,3 +2,4 @@
 title: Введение
 ---
 # Введение
+Жизнь бурлит на великом осколке. Бесконечные караваны движутся от отднюй стоянки к другой и обратно, словно кровь по венам, поддерживая жизнь. Фашрат наполняют земли неоткрытые, куда не ступали еще караваны Хугушей. Земли, наполненные тайнами, где лежат в руинах городов древности. Куда бы не отправился путник, он всегда найдет там места, в которых никто никогда не бывал, или сражения с существами, о которых акыны слагают свои песни, или повстречается с аулом Ма-Улов, которые одарят его своим гостеприимством и разделить с ним хлеб.
