--- a/source/content/01 - Узлы игрока/02 - История/02 - Фашрат сегодня.md
+++ b/source/content/01 - Узлы игрока/02 - История/02 - Фашрат сегодня.md
@@ -1,3 +1,30 @@
 ---
 title: Фашрат сегодня
 ---
+# Фашрат сегодня
+___
+На момент начала игры на Фашрате произошел ряд событий, нарушив покой народов и потрясших осколок в буквальном смысле.
+### Порядок Солнца
+В один день, на горизонте впервые появился свет, чуждый обитателям осколка. Он протянул свои лучи, словно золотые руки, высоко к небесам, пряча все звезды на своем пути к зениту. Среди народов пошли пугающие слухи о конце звезд, о гибели бурханов, богов-покровителей. Но все эти разговоры умолкли по прошествии пятнадцати часов, когда этот свет миновал все небо и достиг другой стороны осколка. Прячась за горизонтом, он начал возвращать звезды на места. Еще через двадцать часов он вернулся, а вместе с ним во множестве городов появились люди, одетые в белые робы. Он называли этот свет - Эшасом Тысячеруким, Великим Солнцем. Говорили они и о том, что он пришел как спаситель, вернуть дневной свет, отнятый когда-то преступлением Шаршама, Первого Солнца.
+
+Эти люди, что несли слово Тысячерукого были прозваны Орденом Тринадцати, не называя своих имен, а просто обращаясь друг к другу как "Первый", "Второй" и так далее. С тех пор все больше людей принимали учения Эшаса, свод порядков и законов написанный Тринадцатью, названных Порядком Солнца. И вот, уже десятки лет, Орден Тринадцати наращивает свое влияние на осколке, обретая как множество новых последователей, так и множество противников его учения.
+___
+### Исчезновение звезд
+Появления Тысячерукого заставило людей всматриваться в ночное небо и наблюдать за звездами, боясь что однажды, в очередной раз скрывшись за горизонтом, он не вернет их обратно. Их страхи были не напрасны, ведь одной ночью, народы Фашрата содрогнулись, став свидетелем ужасающего события - с ночного неба пропала звезда. Через некоторое время еще одна, а следующей ночью пропали еще несколько. Это продолжается и по сей день. Изредка, вглядываясь в ночное небо, можно заметить как пропадают звезды. В эти скорбные ночи люди не говорят, стараются ничем не заниматься, даже не спят. Но что самое главное, они не путешествуют. Закрывшись в своих домах, они возносят молитвы богам-покровителям. Таким образом они чтят память пропавшей звезды.
+
+Когда пропали звезды, жители осколка сразу же обратили свои недовольные взоры в сторону Ордена Тринадцати и их так называемого "спасителя". Сейчас странствующие акыны сочиняют песни о том, как Эшас Тысячерукий поглотит все звезды, уничтожая их одну за одной, чтобы насытиться их силой и управлять самой Судьбой. Естественно Ордену Тринадцати неугодно, что об их спасителе поют такие песни, поэтому он отправляет своих воинов отлавливать таких вольнодумцев. Что с ними происходит, когда они попадают в руки Ордена - неизвестно.
+___
+### Падение башни Ур
+Среди народов Фашрата постоянно гуляют разнообразные слухи. Но после того, как начали исчезать звезды, по осколку принялась расползаться одна история. Странники молвили, что в городе Ур, в Дайназаре, пал один из шести столпов. Последствием его падения стало разрушение целого города и гибель сотен жителей. Ситуацию усугубили еще более пугающие вести. Говорят, что на границах осколка начали замечать темных существ, выходящих из пустоты. Они рыщут вокруг и нападают на все, что встречается на пути. Стражи с севера Кханида подтвердили слухи спустя какое-то время.
+
+Остаётся только гадать, что на самом деле послужило причиной разрушения столпа. То ли, что Тысячерукий начал уничтожать звезды? Кханы стали с подозрением смотреть в сторону Ордена Тринадцати, а позже и вовсе запретили им появляться в городах со столпами. С учетом последних событий, обстановка между жителями Фашрата и последователями Тысячерукого с каждым днем все сильнее накаляется.
+___
+### Каменные гиганты
+Быть может, они восстали из земли, почувствовав, как дуновения ветров Пустоты усиливаются? Или же их воскресили звезды, дабы защититься от Эшаса и его Ордена Тринадцати? Хотя, может просто какие-то глупцы копали так глубоко, что наткнулись на них, спящих, и пробудили? Как бы там ни было, сейчас земли Шуккара бороздят громадные каменные гиганты, чьи тела покрыты золотыми рунами. Управляет ими кто-то, или они просто бездумно слоняются по пустыням и степям - остается загадкой.
+
+Созданные, как оружие против пустоты во времена Войны Нитей - Хатхоры, так их прозвали. Это означает Непоколебимые на древнем диалекте. И такое имя они получили не зря... На пути одного из них лежал город Зарис, но хатхор не останавливался, а продолжал медленно шагать вперед. В тот день, под топотом гиганта, погибли сотни человек, а половина Зариса лежала в руинах.
+___
+### Гнев Пламени
+Казалось бы, все самое ужасное уже случилось или все еще случается. Но во время Месяца Путей, в Саккыне, произошел крупный пожар, уничтоживший северную часть Великого Базара. Во время выступления труппы сааров, с их ни с чем ни сравнимыми танцами, один из танцоров завопил от боли. Через мгновение он вспыхнул ярким пламенем. Его кожа трескалась словно глина, а из трещин стремилось все больше и больше огня, обращая в пепел каждого на своем пути. К моменту, когда пожар удалось потушить, от саара ничего не сталось, как и от всех, кто находился рядом. Он был не единственным, чей Уголь разгорелся: по всему осколку погибало множество сааров. Считается, что таков был гнев Истинного пламени. Наказание за то, что пепельный народ покинул родные земли и отказался от его покровительства. 
+
+Говорят, что были и те, кому удалось пережить возгорание. Их кожа была покрыта трещинами, кончики волос блекло светились, словно искры, а глаза сияли сильнее обычного. Помимо этого, пережившие возгорание саары утверждали, что начали слышать огонь, могли общаться с ним, и даже управлять им. Так как таких сааров было крайне мало, те, кто их не встречал, считал это всего-лишь сказками.
